simple front-end data entry

--- a/admin/language/en-GB/en-GB.com_helloworld.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.ini
@@ -9,6 +9,8 @@ COM_HELLOWORLD_NUM="#"
 COM_HELLOWORLD_HELLOWORLDS_FILTER="Filters"
 COM_HELLOWORLD_PUBLISHED="Published"
 COM_HELLOWORLD_GREET_NAME="Name"
+COM_HELLOWORLD_USER_NAME="User name"
+COM_HELLOWORLD_UID="uID"
 COM_HELLOWORLD_ID="Id"
 COM_HELLOWORLD_HELLOWORLD_CREATING="HelloWorld - Creating"
 COM_HELLOWORLD_HELLOWORLD_DETAILS="Details"
@@ -18,6 +20,8 @@ COM_HELLOWORLD_HELLOWORLD_FIELD_CATID_DESC="The category the messages belongs to
 COM_HELLOWORLD_HELLOWORLD_FIELD_CATID_LABEL="Category"
 COM_HELLOWORLD_HELLOWORLD_FIELD_GREETING_DESC="This message will be displayed"
 COM_HELLOWORLD_HELLOWORLD_FIELD_GREETING_LABEL="Message"
+COM_HELLOWORLD_HELLOWORLD_FIELD_UID_DESC="This user owns the message"
+COM_HELLOWORLD_HELLOWORLD_FIELD_UID_LABEL="UserID"
 COM_HELLOWORLD_HELLOWORLD_FIELD_SHOW_CATEGORY_LABEL="Show category"
 COM_HELLOWORLD_HELLOWORLD_FIELD_SHOW_CATEGORY_DESC="If set to Show, the title of the message&rsquo;s category will show."
 COM_HELLOWORLD_HELLOWORLD_HEADING_GREETING="Greeting"
@@ -32,6 +36,9 @@ COM_HELLOWORLD_N_ITEMS_PUBLISHED="%d message(s) published"
 COM_HELLOWORLD_N_ITEMS_UNPUBLISHED="%d message(s) unpublished"
 COM_HELLOWORLD_HELLOWORLD_GREETING_LABEL="Greeting"
 COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="Add Hello World Greeting"
+COM_HELLOWORLD_HELLOWORLD_UID_LABEL="UserID"
+COM_HELLOWORLD_HELLOWORLD_UID_DESC="Add Hello World UserID"
+COM_HELLOWORLD_HELLOWORLD_UID_SELECT="- Select uID -"
 COM_HELLOWORLD_SUBMENU_MESSAGES="Messages"
 COM_HELLOWORLD_SUBMENU_CATEGORIES="Categories"
 COM_HELLOWORLD_CONFIGURATION="HelloWorld Configuration"
@@ -41,3 +48,7 @@ COM_HELLOWORLD_FIELDSET_RULES="Message Permissions"
 COM_HELLOWORLD_FIELD_RULES_LABEL="Permissions"
 COM_HELLOWORLD_ACCESS_EDIT_DESC="Is this group allowed to edit this message?"
 COM_HELLOWORLD_ACCESS_DELETE_DESC="Is this group allowed to delete this message?"
+COM_HELLOWORLD_IMPORT_SUCCESS="HelloWorld successful import"
+COM_HELLOWORLD_IMPORT_ERRORS="HelloWorld the import had some errors"
+COM_HELLOWORLD_SAVE_SUCCESS="HelloWorld items saved successfully"
+COM_HELLOWORLD_SAVE_ERRORS="HelloWorld saving some items failed"
