record item editing page

--- a/site/language/en-GB/en-GB.com_helloworld.ini
+++ b/site/language/en-GB/en-GB.com_helloworld.ini
@@ -3,6 +3,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+COM_HELLOWORLD_SITE="HelloWorld - Site"
+COM_HELLOWORLD_SITE_CATEGORIES="HelloWorld - Categories"
 COM_HELLOWORLD_NUM="#"
 COM_HELLOWORLD_HELLOWORLDS_FILTER="Filters"
 COM_HELLOWORLD_PUBLISHED="Published"
@@ -10,6 +12,16 @@ COM_HELLOWORLD_GREET_NAME="Name"
 COM_HELLOWORLD_USER_NAME="User name"
 COM_HELLOWORLD_UID="uID"
 COM_HELLOWORLD_ID="Id"
+COM_HELLOWORLD_HELLOWORLD_EDIT="HelloWorld: Edit Message"
+COM_HELLOWORLD_HELLOWORLD_NEW="HelloWorld: New Message"
+COM_HELLOWORLD_HELLOWORLD_CREATING="HelloWorld - Creating"
+COM_HELLOWORLD_HELLOWORLD_EDITING="HelloWorld - Editing"
+COM_HELLOWORLD_HELLOWORLD_ERROR_UNACCEPTABLE="Some values are unacceptable"
+COM_HELLOWORLD_HELLOWORLD_GREETING_LABEL="Greeting"
+COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="Add Hello World Greeting"
+COM_HELLOWORLD_HELLOWORLD_UID_LABEL="UserID"
+COM_HELLOWORLD_HELLOWORLD_UID_DESC="Add Hello World UserID"
+COM_HELLOWORLD_HELLOWORLD_UID_SELECT="- Select uID -"
 COM_HELLOWORLD_ACCESS_EDIT_DESC="Is this group allowed to edit this message?"
 COM_HELLOWORLD_ACCESS_DELETE_DESC="Is this group allowed to delete this message?"
 COM_HELLOWORLD_IMPORT_SUCCESS="HelloWorld successful import"
