record list view page

--- a/admin/language/en-GB/en-GB.com_helloworld.sys.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.sys.ini
@@ -7,6 +7,8 @@ COM_HELLOWORLD="Hello World!"
 COM_HELLOWORLD_DESCRIPTION="This is the Hello World description"
 COM_HELLOWORLD_HELLOWORLD_VIEW_DEFAULT_TITLE="Hello World"
 COM_HELLOWORLD_HELLOWORLD_VIEW_DEFAULT_DESC="This view displays a selected message"
+COM_HELLOWORLD_HELLOWORLDS_VIEW_DEFAULT_TITLE="Hello World List"
+COM_HELLOWORLD_HELLOWORLDS_VIEW_DEFAULT_DESC="This view displays a selection list"
 COM_HELLOWORLD_INSTALL_TEXT="HelloWorld Install script"
 COM_HELLOWORLD_MENU="Hello World!"
 COM_HELLOWORLD_POSTFLIGHT_DISCOVER_INSTALL_TEXT="HelloWorld postlight discover install script"
