--- a/site/language/en-GB/en-GB.com_helloworld.ini
+++ b/site/language/en-GB/en-GB.com_helloworld.ini
@@ -22,6 +22,10 @@ COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="Add Hello World Greeting"
 COM_HELLOWORLD_HELLOWORLD_UID_LABEL="UserID"
 COM_HELLOWORLD_HELLOWORLD_UID_DESC="Add Hello World UserID"
 COM_HELLOWORLD_HELLOWORLD_UID_SELECT="- Select uID -"
+COM_HELLOWORLD_N_ITEMS_DELETED_1="One message deleted"
+COM_HELLOWORLD_N_ITEMS_DELETED_MORE="%d messages deleted"
+COM_HELLOWORLD_N_ITEMS_PUBLISHED="%d message(s) published"
+COM_HELLOWORLD_N_ITEMS_UNPUBLISHED="%d message(s) unpublished"
 COM_HELLOWORLD_ACCESS_EDIT_DESC="Is this group allowed to edit this message?"
 COM_HELLOWORLD_ACCESS_DELETE_DESC="Is this group allowed to delete this message?"
 COM_HELLOWORLD_IMPORT_SUCCESS="HelloWorld successful import"
