rethink front-end permissions

--- a/admin/language/en-GB/en-GB.com_helloworld.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.ini
@@ -46,6 +46,11 @@ COM_HELLOWORLD_CONFIG_GREETING_SETTINGS_LABEL="Messages settings"
 COM_HELLOWORLD_CONFIG_GREETING_SETTINGS_DESC="Settings that will be applied to all messages by default"
 COM_HELLOWORLD_FIELDSET_RULES="Message Permissions"
 COM_HELLOWORLD_FIELD_RULES_LABEL="Permissions"
+COM_HELLOWORLD_ACTION_NO_ACCESS="Access"
+COM_HELLOWORLD_ACTION_NO_ACCESS_DESC="Is this group allowed to access this component?"
+COM_HELLOWORLD_ACTION_VIEW="View"
+COM_HELLOWORLD_ACTION_VIEW_DESC="Allows users in the group to view any content in this extension."
+COM_HELLOWORLD_ACCESS_VIEW_DESC="Is this group allowed to view this message."
 COM_HELLOWORLD_ACCESS_EDIT_DESC="Is this group allowed to edit this message?"
 COM_HELLOWORLD_ACCESS_DELETE_DESC="Is this group allowed to delete this message?"
 COM_HELLOWORLD_IMPORT_SUCCESS="HelloWorld successful import"
