--- a/site/language/en-GB/en-GB.com_helloworld.ini
+++ b/site/language/en-GB/en-GB.com_helloworld.ini
@@ -26,6 +26,8 @@ COM_HELLOWORLD_N_ITEMS_DELETED_1="One message deleted"
 COM_HELLOWORLD_N_ITEMS_DELETED_MORE="%d messages deleted"
 COM_HELLOWORLD_N_ITEMS_PUBLISHED="%d message(s) published"
 COM_HELLOWORLD_N_ITEMS_UNPUBLISHED="%d message(s) unpublished"
+COM_HELLOWORLD_ACCESS_NO_ACCESS="You have no permission to access this component"
+COM_HELLOWORLD_ACCESS_NO_VIEW="You have no permission to view this message"
 COM_HELLOWORLD_ACCESS_EDIT_DESC="Is this group allowed to edit this message?"
 COM_HELLOWORLD_ACCESS_DELETE_DESC="Is this group allowed to delete this message?"
 COM_HELLOWORLD_IMPORT_SUCCESS="HelloWorld successful import"
